Fix z-indexes

--- a/css/landing.css
+++ b/css/landing.css
@@ -1,27 +1,29 @@
 #background {
-	position: fixed;
-	width: 100%;
-	height: auto;
+    position: fixed;
+    height: auto;
+    width: 100%;
+    min-width: 100%;
+    min-height: 100%;
 }
 #title {
-	font: 600 4em/1em 'Ralseway';
-	color: #FFF;
-	position: fixed;
-	width: 100%;
-	left: 0;
-	padding-left: 30px;
-	text-align: center;
-	bottom: 50%;
+    font: 600 4em/1em 'Raleway';
+    color: #FFF;
+    position: fixed;
+    width: 100%;
+    left: 0;
+    text-align: center;
+    bottom: 50%;
 }
 
 #hold {
-	position: absolute;
-	top: 100%;
-	left: 0;
-	width: 100%;
-	max-width: 100%;
-	margin-top: -50px;
-	background-color: #fff;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    max-width: 100%;
+    margin-top: -50px;
+    background-color: #fff;
+    z-index: 1;
 }
 #content {
     padding-top: 100px;
@@ -29,44 +31,64 @@
 
 /* Work */
 #work {
-	position: relative;
-	width: 100%;
-	height: 500px;
-	text-align: center;
-	margin: 100px 0 0 0;
-	z-index: 2;
+    position: relative;
+    width: 100%;
+    height: 500px;
+    text-align: center;
+    margin: 100px 0 0 0;
+    z-index: 2;
 }
 #work > img {
-	position: relative;
-	z-index: 3;
+    position: relative;
+    z-index: 3;
 }
 .slider {
-	display: block;
-	margin: 0 auto;
-	margin-top: -509px;
-	width: 700px;
-	height: 390px;
-	font-size: 0;
-	white-space: nowrap;
-	overflow: hidden;
+    display: block;
+    margin: 0 auto;
+    margin-top: -512px;
+    width: 700px;
+    height: 390px;
+    font-size: 0;
+    white-space: nowrap;
+    overflow: hidden;
 }
 .strip {
-	position: relative;
-	display: inline-block;
-	-webkit-transition: left 0.3s ease-out;
-	-moz-transition: left 0.3s ease-out;
-	-ms-transition: left 0.3s ease-out;
-	-o-transition: left 0.3s ease-out;
-	transition: left 0.3s ease-out;
+    position: relative;
+    display: inline-block;
+    -webkit-transition: left 0.3s ease-out;
+    -moz-transition: left 0.3s ease-out;
+    -ms-transition: left 0.3s ease-out;
+    -o-transition: left 0.3s ease-out;
+    transition: left 0.3s ease-out;
 }
 .slide {
-	width: 700px;
-	height: 390px;
-	display: inline-block;
-	text-align: center;
+    width: 700px;
+    height: 390px;
+    display: inline-block;
+    text-align: center;
 }
 .slide > img {
-	width: 100%;
-	height: auto;
-	vertical-align: middle;
+    width: 100%;
+    height: auto;
+    vertical-align: middle;
+}
+
+@media screen and (max-width: 1024px) {
+    #background {
+        width: auto;
+        height: 100%;
+    }
+    #title {
+        font-size: 3em;
+        line-height: 1.1em;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    #title, #background, #work {
+        display: none;
+    }
+    #hold {
+        top: 0;
+    }
 }
